<resources>
    <string name="app_name">Personas_I</string>
    <string name="tvCedula">Cédula</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvApellido">Apellido</string>
    <string name="tvTitulo">Registrar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnBorrar">Borrar</string>
    <string name="tvNumero">No.</string>
    <string name="mensaje_guardado">Persona Guardada Exitosamente</string>
    <string name="registrar">Registrar</string>
    <string name="listar">Listar</string>

    <string-array name="opciones">
        <item>@string/registrar</item>
        <item>@string/listar</item>
    </string-array>
</resources>
